# ModularSimulator

./: .gitignore  AGENTS.md  LLM_CONTEXT.md  TODO  agent.md  checkpt.pkl  pyproject.toml  readme.md  verify_serialization.py
.sisyphus/plans/: connection-layer-corrected.md
docs/: class_wiring_diagram.drawio  class_wiring_diagram.md  control_loop_interaction.mermaid  diagram.drawio  diagram.mermaid  initialization.mermaid  simulation_step.mermaid  source_organization_proposal.md
examples/: __init__.py
examples/connection_layer/: __init__.py  pump_causality_demo.py  split_reversal_demo.py  two_tank_reaction_comparison.py
examples/gas_phase_polymerization/: TODO  __init__.py  analyze.py  component_definition.py  controller_definitions.py  diagram.md  process_definition.py  run_simulation.py  system_definitions.py  usable_definitions.py
examples/simple_dummy_system/: README.md
examples/simple_irreversable_system/: readme.md
examples/simple_irreversible_energy_balance_system/: __init__.py  analyze.py  component_definition.py  diagram.md  readme.md  run_simulation.py  system_definitions.py  test_time.py
examples/simple_irreversible_system/: __init__.py  a  analyze.py  checkpoint_irreversible.json  component_definition.py  continue_simulation.py  diagram.md  process_definition.py  readme.md  run_simulation.py  sensor_definitions.py  system_definitions.py  test_time.py  try_ui.py
examples/simple_plant/: plant_definitions.py  run_simulation.py
examples/simplified_gas_phase/: calculation_definition.py  calculations.py  controllers.py  demonstrate_bad_c2pp_control.py  demonstrate_bad_rM2_control.py  demonstrate_disturbance.py  run_simulation.py  sensors.py  system_definition.py
examples/simplified_gas_phase_system/: analyze.py  calculation_definition.py  component_definition.py  diagram.md  process_definition.py  run_simulation.py
examples/van_de_vusse_cstr/: __init__.py  analyze.py  calculation_definition.py  component_definition.py  diagram.md  process_definition.py  readme.md  run_simulation.py  system_definitions.py  test_time.py
new_examples/gas_phase_polymerization/: TODO  component_definition.py  process_definition.py  run_simulation.py
new_examples/simple_irreversible_energy_balance_system/: analyze.py  component_definition.py  process_definition.py  run_simulation.py
new_examples/simple_irreversible_system/: analyze.py  component_definition.py  process_definition.py  run_simulation.py
new_examples/simplified_gas_phase_system/: analyze.py  calculation_definition.py  component_definition.py  diagram.md  process_definition.py  run_simulation.py
new_examples/van_de_vusse_cstr/: analyze.py  calculation_definition.py  component_definition.py  diagram.md  run_simulation.py
scripts/: test_append_vs_preallocate.py  test_attribute_access_vs_cache_dict_access.py  test_index_map_or_dict.py  test_njit_wrapper.py  test_numba_dict  test_pydantic
src/modular_simulation/: __init__.py  extentable_plan.md  plant.py  quantities.py  system.py  temp
src/modular_simulation.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: conftest.py  dummy_test_definitions.py  test_annotation.py  test_calculations.py  test_components.py  test_controller.py  test_dynamic_model.py  test_measurables.py  test_plotting.py  test_process_model.py  test_save_load_minimal.py  test_sensor.py  test_sensors.py  test_serializable.py  test_system.py  test_system_history.py  test_trajectory.py  test_usable_quantities.py
tests/connection/: test_connection_integration_physics.py  test_connection_layer_picard_gate.py  (+26 more)
(+177 files in other folders)
